--- a/Index.html
+++ b/Index.html
@@ -24,57 +24,55 @@
         <nav id="colorChangingDiv" class="navbar fixed-top   navbar-expand-lg  py-4 border-bottom btn-secondary ">
           <div class="container d-none d-lg-block d-xl-block w-100">
 
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                  data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
-                  aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarScroll">
-                  <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
-                      <li> <a  class="navbar-brand nav-link text-white"  href="#">Logo</a></li>
-                      <li class="nav-item" >
-                          <a   class="nav-link active text-white" aria-current="page" href="#">Dashboard</a>
-                      </li>
-                      <li class="nav-item">
-                          <a   class="nav-link text-white" href="#">Pages</a>
-                      </li>
-                      <li class="nav-item">
-                          <a   class="nav-link text-white">App</a>
-                      </li>
-                      <li class="nav-item">
-                          <a  class="nav-link text-white">Help</a>
-                      </li>
-                  </ul>
-                  <div class="d-flex justify-content-end w-100" role="search">
-                      <button class="btn bg-transparent" type="submit"><i
-                              class="bi bi-search text-white "></i></button>
-                  </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+              aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+              <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll">
+                <li> <a class="navbar-brand nav-link text-white" href="#">Logo</a></li>
+                <li class="nav-item">
+                  <a class="nav-link active text-white" aria-current="page" href="#">Dashboard</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Pages</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white">App</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white">Help</a>
+                </li>
+              </ul>
+              <div class="d-flex justify-content-end w-100" role="search">
+                <button class="btn bg-transparent" type="submit"><i class="bi bi-search text-white "></i></button>
               </div>
+            </div>
           </div>
 
           <!-- mobile nav start  -->
           <nav class="navbar navbar-light bg-transparent width_nav">
-              <div class="container d-block d-lg-none d-xl-none ">
-                  <div class="d-flex justify-content-between ">
-                      <div>
-                          <button class="menu btn " type="button" data-bs-toggle="offcanvas"
-                              data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
-                              <i class="bi bi-menu-button-wide d-block text-white "></i>
-                          </button>
-                          <a class="navbar-brand text-white" href="#">Logo</a>
-                      </div>
+            <div class="container d-block d-lg-none d-xl-none ">
+              <div class="d-flex justify-content-between ">
+                <div>
+                  <button class="menu btn " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+                    aria-controls="offcanvasExample">
+                    <i class="bi bi-menu-button-wide d-block text-white "></i>
+                  </button>
+                  <a class="navbar-brand text-white" href="#">Logo</a>
+                </div>
 
-                      <div class="text-end">
-                          <button class="menu btn " type="button" data-bs-toggle="offcanvas"
-                              data-bs-target="#offcanvasExamplemenu" aria-controls="offcanvasExample">
-                              <i class="bi bi-menu-button-wide d-block text-white "></i>
-                          </button>
-                      </div>
-                  </div>
+                <div class="text-end">
+                  <button class="menu btn " type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasExamplemenu" aria-controls="offcanvasExample">
+                    <i class="bi bi-menu-button-wide d-block text-white "></i>
+                  </button>
+                </div>
               </div>
+            </div>
           </nav>
           <!-- mobile nav end  -->
-      </nav>
+        </nav>
       </div>
       <!-- nav bar end -->
     </div>
@@ -85,15 +83,15 @@
       <!-- menu section start -->
       <div class="col-1 width_col-1">
         <div class="bg-light shadow rounded_side_nav d-none d-lg-block d-xl-block">
-            <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
-        <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
+          <i class="bi bi-menu-button-wide d-block d-flex justify-content-center py-4"></i>
         </div>
-    </div>
+      </div>
       <!-- menu section end -->
 
       <div class="col-lg-11  col-lg-11_width">
@@ -207,9 +205,9 @@
 
             <!-- table start  -->
             <div class="col-lg-12 my-5">
-             
+
               <!-- table header menu start  -->
-              <div class="d-flex justify-content-between flex-column flex-lg-row">
+              <!-- <div class="d-flex justify-content-between flex-column flex-lg-row">
                 <div class="d-flex flex-column flex-lg-row">
                   <div class="d-flex">
                     <div>
@@ -249,14 +247,6 @@
                       <span class="btn action_btn_css ms-1"><i class="bi bi-funnel-fill"></i> Filter</span>
                     </div>
                   </div>
-                  <!-- <div class="d-flex ">
-                    <div class="ms-3">
-                      <div class="input-group mb-3 w-75" >
-                        <span class="input-group-text btn border" id="basic-addon1"><i class="bi bi-search"></i></span>
-                        <input type="text" class="form-control form-control-solid border" placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
-                      </div>
-                    </div>
-                  </div> -->
                 </div>
                 <div class="d-flex">
                   <div class="dropdown me-1">
@@ -276,30 +266,109 @@
                     </button>
                   </div>
                 </div>
+              </div> -->
+
+              <div class="row border mb-3 pb-3 mx-lg-1 rounded-3">
+                <div class="col-lg-2">
+                  <label for="exampleFormControlInput1" class="font_lable form-label mt-3">Date Range</label>
+                  <select class="form-select form-control-solid form-input_text" aria-label="Default select example">
+                    <option selected> - All -</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-lg-2">
+                  <label for="exampleFormControlInput1" class="font_lable form-label mt-3">Airport</label>
+                  <select class="form-select form-control-solid form-input_text" aria-label="Default select example">
+                    <option selected> - All -</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-lg-2">
+                  <label for="exampleFormControlInput1" class="font_lable form-label mt-3">Created By</label>
+                  <select class="form-select form-control-solid form-input_text" aria-label="Default select example">
+                    <option selected> - All -</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-lg-2">
+                  <label for="exampleFormControlInput1" class="font_lable form-label mt-3">Department</label>
+                  <select class="form-select form-control-solid form-input_text" aria-label="Default select example">
+                    <option selected> - All -</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-lg-2">
+                  <label for="exampleFormControlInput1" class="font_lable form-label mt-3">Category</label>
+                  <select class="form-select form-control-solid form-input_text" aria-label="Default select example">
+                    <option selected> - All -</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-lg-2">
+                  <label for="exampleFormControlInput1" class="font_lable form-label mt-3">Sub Category</label>
+                  <select class="form-select form-control-solid form-input_text" aria-label="Default select example">
+                    <option selected> - All -</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-lg-2">
+                  <label for="exampleFormControlInput1" class="font_lable form-label mt-3">Line Item</label>
+                  <select class="form-select form-control-solid form-input_text" aria-label="Default select example">
+                    <option selected> - All -</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+                </div>
+                <div class="col-lg-2">
+                  <!-- <label for="exampleFormControlInput1" class="font_lable form-label mt-3">Airport</label> -->
+                  <input class="form-control form-control-solid form-input_text mt-5" placeholder="Search" aria-label="Default select example">
+                  </input>
+                </div>
+
+                <div class="col-lg-12 mt-3 d-flex justify-content-center">
+                  <button class="btn btn-outline-primary me-1"><i class="bi bi-funnel-fill"></i> Filter</button>
+                  <button class="btn btn-outline-danger ms-1"><i class="bi bi-file-earmark-x-fill"></i> Reset</button>
+                </div>
+
               </div>
 
               <!-- table header menu end  -->
               <div class="table-responsive">
-              <table class="table table-borderless shadow-sm mt-2">
-                <!-- table head  -->
-                <thead class="border-bottom">
-                  <tr>
-                    <th>
+                <table class="table table-borderless shadow-sm mt-2">
+                  <!-- table head  -->
+                  <thead class="border-bottom">
+                    <tr>
+                      <!-- <th>
                       <input class="form-check-input check_box_size" type="checkbox" >
-                    </th>
-                    <th scope="col" class="text-muted text_style_TH">Order ID</th>
-                    <th scope="col" class="text-muted text_style_TH">Customer </th>
-                    <th scope="col" class="text-muted text_style_TH">Status</th>
-                    <th scope="col" class="text-muted text_style_TH">Total</th>
-                    <th scope="col" class="text-muted text_style_TH">Date Added</th>
-                    <th scope="col" class="text-muted text_style_TH">Dated Modified</th>
-                    <th scope="col" class="text-muted text_style_TH">Actions</th>
-                  </tr>
-                </thead>
-                <!-- table head  -->
-                <tbody>
-                  <!--table row one start -->
-                  <tr>
+                    </th> -->
+                      <th scope="col" class="text-muted text_style_TH">#</th>
+                      <th scope="col" class="text-muted text_style_TH">Code </th>
+                      <th scope="col" class="text-muted text_style_TH">Date & Time</th>
+                      <th scope="col" class="text-muted text_style_TH">Airport</th>
+                      <th scope="col" class="text-muted text_style_TH">Department</th>
+                      <th scope="col" class="text-muted text_style_TH">Category</th>
+                      <th scope="col" class="text-muted text_style_TH">Notes</th>
+                      <th scope="col" class="text-muted text_style_TH">Added By</th>
+                      <th scope="col" class="text-muted text_style_TH">Edit</th>
+                    </tr>
+                  </thead>
+                  <!-- table head  -->
+                  <tbody>
+                    <!--table row one start -->
+                    <!-- <tr>
                     <td> <input class="form-check-input check_box_size" type="checkbox" ></td>
                     <th scope="row" class="cell_table">14397</th>
                     <td>
@@ -326,11 +395,11 @@
                         </ul>
                       </div>
                     </td>
-                  </tr>
-                  <!--table row one end -->
+                  </tr> -->
+                    <!--table row one end -->
 
-                  <!--table row two start -->
-                  <tr>
+                    <!--table row two start -->
+                    <!-- <tr>
                     <td> <input class="form-check-input check_box_size" type="checkbox" ></td>
                     <th scope="row" class="cell_table">14397</th>
                     <td>
@@ -357,12 +426,39 @@
                         </ul>
                       </div>
                     </td>
-                  </tr>
-                  <!--table row two end -->
+                  </tr> -->
+                    <!--table row two end -->
 
-                </tbody>
-              </table>
-            </div>
+                    <!-- table row start -->
+                    <tr>
+                      <th scope="row" class="cell_table">1</th>
+                      <td class="cell_table text-muted fw-bold">OPSLOG18</td>
+                      <td class="cell_table text-muted fw-bold">07/12/2023</td>
+                      <td class="cell_table text-muted fw-bold">Airport 1</td>
+                      <td class="cell_table text-muted fw-bold">Infrastructure</td>
+                      <td class="cell_table text-muted fw-bold">Infra Cat 1</td>
+                      <td class="cell_table text-muted fw-bold">Notes text</td>
+                      <td class="cell_table text-muted fw-bold">Admin</td>
+                      <td class="cell_table  fw-bold"><span class="btn btn-sm border"><i
+                            class="bi bi-pencil-square"></i></span></td>
+                    </tr>
+                    <tr>
+                      <th scope="row" class="cell_table">2</th>
+                      <td class="cell_table text-muted fw-bold">OPSLOG18</td>
+                      <td class="cell_table text-muted fw-bold">07/12/2023</td>
+                      <td class="cell_table text-muted fw-bold">Airport 1</td>
+                      <td class="cell_table text-muted fw-bold">Infrastructure</td>
+                      <td class="cell_table text-muted fw-bold">Infra Cat 1</td>
+                      <td class="cell_table text-muted fw-bold">Notes text</td>
+                      <td class="cell_table text-muted fw-bold">Admin</td>
+                      <td class="cell_table  fw-bold"><span class="btn btn-sm border"><i
+                            class="bi bi-pencil-square"></i></span></td>
+                    </tr>
+                    <!-- table row end -->
+
+                  </tbody>
+                </table>
+              </div>
               <div class="d-flex justify-content-between">
                 <div>
                   <div class="dropdown shadow-sm">
@@ -463,11 +559,11 @@
   <!-- off canva menu two end -->
 
 
-   <!-- coustom js  -->
-   <script src="./assets/js/main.js"></script>
+  <!-- coustom js  -->
+  <script src="./assets/js/main.js"></script>
   <!-- boostrap js  -->
   <script src="./assets/vendor/bootstrap-5.3.2-dist/js/bootstrap.bundle.min.js"></script>
-  
+
 </body>
 
 </html>
