--- a/login.html
+++ b/login.html
@@ -82,7 +82,7 @@
 
     <div class="container-fluid  login_sec_start">
         <div class="row">
-            <div class="col-lg-8 h-100">
+            <div class="col-lg-8 ">
                 <div class="row">
                     <div class="col-lg-12 bg-img mb-3">
                         <!-- login card start  -->
@@ -135,10 +135,11 @@
                         <!-- login card end  -->
                     </div>
                     <div class="col-lg-6  ">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 ">
                             <!-- notams section start  -->
                             <span
-                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Administrator</span>
+                                class="head_style_radio text-center sticky-top bg-white d-block px-2 mt-3 mb-3 border-bottom pb-3">Administrator</span>
+                         <div class="height_admini">
                             <span class="d-block">(S8973/22 NOTAMR $8936/22A) CYYT B) 2202132058 C) 2202140458E) RSC 11
                                 6/6/6 DRY, DRY, DRY. VALID FEB 13 2058 - FEB 14 0458.
                             </span>
@@ -160,21 +161,30 @@
                                 UPDATED LIST OF AUTH AIRPORTS OF ENTRY SEE THE LINK FOR OPEN PORTS OF ENTRY AT
                                 WWW.CBSA-ASFC.GC.CA/OFFICES
                             </span>
+                            <span class="d-block ">
+                                BORDER SVC ARE TEMPO SUSPENDED AT THE MAJORITY OF SMALL AIRPORTS ACROSS CANADA, FOR AN
+                                UPDATED LIST OF AUTH AIRPORTS OF ENTRY SEE THE LINK FOR OPEN PORTS OF ENTRY AT
+                                WWW.CBSA-ASFC.GC.CA/OFFICES
+                            </span>
+                         </div>
                             <!-- notams section end  -->
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 mt-3 mt-lg-0 ">
+                        <div class="rounded-3 bg-white border border-light shadow-sm  px-2 mt-3 mt-lg-0 ">
                             <!-- Airport Bulletin section start  -->
                             <span
-                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport
+                                class="head_style_radio sticky-top bg-white text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport
                                 Bulletin</span>
-                            <span>This is a space where important information, daily happenings/updates will be posted.
-                            </span>
+                           
+                            <div class="height_Airport"> 
+                                <span>This is a space where important information, daily happenings/updates will be posted.
+                                </span>
+                            </div>
                             <!-- Airport Bulletin section end  -->
                         </div>
 
-                        <div class="rounded-3 bg-white border text-center border-light shadow-sm  mt-2 px-2 mt-3 ">
+                        <div class="rounded-3 bg-white border text-center border-light shadow-sm height_Airport_2  mt-2 px-2 mt-3 ">
                             <!-- sms section start  -->
                             <span class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">SMS
                                 Stats</span>
@@ -184,10 +194,10 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 h-100">
+            <div class="col-lg-4 ">
                 <div class="row">
                     <div class="col-lg-8">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100 mt-3 mt-lg-0">
+                        <div class="rounded-3 bg-white border border-light shadow-sm px-2   mt-3 mt-lg-0">
                             <!-- Sun & Cloud section start  -->
                             <span
                                 class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3 ">Airport
@@ -202,7 +212,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                        <div class="rounded-3 bg-white border h-100 border-light shadow-sm px-2 ">
                             <!-- Airport Bulletin section start  -->
                             <span class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">AVSEC
                                 Level</span>
@@ -211,10 +221,11 @@
                         </div>
                     </div>
                     <div class="col-lg-12 mt-3">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                        <div class="rounded-3 bg-white border border-light   shadow-sm px-2 ">
                             <!-- Airport Bulletin section start  -->
-                            <span class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">AVSEC
+                            <span class="head_style_radio sticky-top bg-white  text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">AVSEC
                                 Level</span>
+                           <div class="h_avsec">
                             <span class="text-muted d-block"><b class="text-dark">Airport Personnel -</b> Feb 13,
                                 2022</span>
                             <span class="text-muted d-block"><b class="text-dark">Operations & Emergency Services: </b>
@@ -232,16 +243,24 @@
                             <span class="text-muted d-block"><b class="text-dark">RCMP:</b>On Site until 15:00</span>
                             <span class="text-muted d-block"><b class="text-dark">Airport Manager on Call
                                     (AMOC):</b>Phillip Elchitz</span>
+                                    <span class="text-muted d-block"><b class="text-dark">Airport Manager on Call
+                                        (AMOC):</b>Phillip Elchitz</span>
+                                        <span class="text-muted d-block"><b class="text-dark">Airport Manager on Call
+                                            (AMOC):</b>Phillip Elchitz</span>
+                                            <span class="text-muted d-block"><b class="text-dark">Airport Manager on Call
+                                                (AMOC):</b>Phillip Elchitz</span>
+                           </div>
                             <!-- Airport Bulletin section end  -->
                         </div>
                     </div>
 
                     <div class="col-lg-6 mt-3">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                        <div class="rounded-3 bg-white border  border-light shadow-sm px-2 ">
                             <!-- Airport Bulletin section start  -->
                             <span
-                                class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Rerminal
+                                class="head_style_radio sticky-top bg-white text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Rerminal
                                 / Groundside</span>
+                          <div class="sm_container_Height">
                             <span class="d-block"><i class="bi bi-x-square text-danger"></i> Arrival carousels</span>
                             <span class="d-block"><i class="bi bi-square-fill text-success"></i> Cuss/cute</span>
                             <span class="d-block"><i class="bi bi-square-fill text-success"></i> Fids</span>
@@ -253,15 +272,17 @@
                             <span class="d-block"><i class="bi bi-square-fill text-success"></i> check in
                                 counters</span>
                             <span class="d-block"><i class="bi bi-square-fill text-success"></i> Parking machines</span>
+                          </div>
                             <!-- Airport Bulletin section end  -->
                         </div>
                     </div>
 
                     <div class="col-lg-6  mt-3">
-                        <div class="rounded-3 bg-white border border-light shadow-sm px-2 h-100">
+                        <div class="rounded-3 bg-white border  border-light shadow-sm px-2 ">
                             <!-- Airport Bulletin section start  -->
-                            <span class="head_style_radio text-center d-block px-2 mt-3 mb-3 border-bottom pb-3">Daily
+                            <span class="head_style_radio text-center sticky-top bg-white d-block px-2 mt-3 mb-3 border-bottom pb-3">Daily
                                 Ops</span>
+                           <div class="sm_container_Height">
                             <span class="d-block"><i class="bi bi-square-fill text-success"></i> Bridges</span>
                             <span class="d-block ms-3"><i class="bi bi-cone text-warning"></i> Bridge 2</span>
                             <span class="d-block"><i class="bi bi-square-fill text-success"></i> Glycol facility</span>
@@ -277,6 +298,7 @@
                             <span class="d-block"><i class="bi bi-square-fill text-success"></i> NAV Aids</span>
                             <span class="d-block"><i class="bi bi-square-fill text-success"></i> Roadway</span>
                             <span class="d-block"><i class="bi bi-x-square text-danger"></i> De-icing pad</span>
+                           </div>
                             <!-- Airport Bulletin section end  -->
                         </div>
                     </div>
